<resources>
    <string name="app_name">mvpdagger</string>
    <string name="clear_cart">Clear Shopping</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_library">Library</string>
    <string name="title_quantity">Quantity</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="title_sale">Sale</string>
    <string name="inc_item">+</string>
    <string name="dec_item">-</string>
    <string name="shopping_cart_subtotal_title">Subtotal</string>
    <string name="shopping_cart_discount_title">Discount</string>
    <string name="shopping_cart_charge_title">Charge</string>
</resources>
