<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/title_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:text="@string/btn_cancel"
                android:layout_gravity="start"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:text="@string/btn_save"
                android:layout_gravity="end"/>
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_quantity"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/edt_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:inputType="number"/>

        <Button
            android:id="@+id/btn_increment"
            android:text="@string/inc_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"/>

        <Button
            android:id="@+id/btn_decrement"
            android:text="@string/dec_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"/>
    </LinearLayout>




</LinearLayout>